# jarvis-monolith

./: .gitignore  .python-version  AGENTS.md  Joe.vbs  Joe.vbs - Shortcut.lnk  README.md  install.bat  install.sh  jarvis.py  joe.py  pyproject.toml
jarvis_monolith.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
systemd/: jarvis.service
