[project]
name = "joe-monolith"
version = "2.0.0"
description = "A zero-latency voice dictation tool using faster-whisper with CUDA support on Windows."
requires-python = ">=3.10"
dependencies = [
    "faster-whisper",
    "sounddevice",
    "numpy",
    "scipy",
    "keyboard",
    "pyautogui",
    "pyperclip",
    "win11toast",
    "pystray",
    "pillow",
]

# torch is optional -- only used to detect CUDA GPUs.
# faster-whisper uses CTranslate2 which has its own CUDA support.
# To enable GPU detection, install separately:
#   pip install torch --index-url https://download.pytorch.org/whl/cu124
